# buddhakorea

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  CNAME  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.migrate  HETZNER_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  Makefile  PLAN_DEVOPS_ROADMAP.md  README.md  README_RAG.md  ROLLBACK-PROCEDURE.md  USAGE_GUIDE.md  chat.html  embedding_log.txt  index.html  meditation.html  methodology.html  package.json  pyproject.toml  pytest.ini  requirements.txt  search.html  style.css  sutra-writing.html  teaching.html  test-dissolution.html  test_buddhist_terms.py  verify-update.html
backend/: alembic.ini  pytest.ini
config/: docker-compose.dev.yml  docker-compose.yml  nginx.conf  redis.conf
css/: library.css  meditation.css  search.css  styles.backup.css  styles.css  sutra.css  teaching.css
data/: sutras.json  teachings.json
docs/: ADMIN_PANEL.md  ADMIN_SECURITY.md  AUTHENTICATION.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPRECATION_CLEANUP.md  DEVELOPMENT.md  Database.md  LOGGING.md  MIGRATIONS_AND_SCHEMA.md  MIGRATION_NOTES.md  OBSERVABILITY_STATUS.md  PALI_STUDIO_INTEGRATION_PLAN.md  PLAN_ADMIN_TESTING.md  PLAN_PLAYWRIGHT_TESTING.md  PRIVACY_AND_DATA_RETENTION.md  PRODUCTION_RUNBOOK.md  PRODUCTION_STATUS.md  PROMPT_MANAGEMENT.md  QUICK_CHECKLIST.md  RAG_ARCHITECTURE.md  RAG_REGRESSION_TESTING.md  README.md  SECRETS_MANAGEMENT.md  SOURCE_GOVERNANCE.md
feedback/: GOOGLE_FORMS_GUIDE.md  README.md  SETUP_GUIDE.md
frontend/: .gitignore  chat.html  index.html  meditation.html  methodology.html  mypage.html  package-lock.json  package.json  playwright.config.ts  sutra-writing.html  teaching.html  tsconfig.json
js/: ephemeral.js  main.js  meditation.js  search.js  sutra-data.js  sutra.js  teaching.js
opennotebook/: .dockerignore  .env.example  .env.production  .gitignore  CBETA_Technical_Report.md  DEPLOYMENT.md  Dockerfile  LOGGING_SYSTEM.md  OpenNotebook_development_plan.md  PLAN_DATA_NORMALIZATION.md  PLAN_UI_REDESIGN.md  PRODUCTION_README.md  QUICK_START.md  README-DEPLOYMENT.md  README.md  USAGE_TRACKING_README.md  analytics_processor.py  analyze_distribution.py  cache_cosmology.py  cache_llm.py  cached_responses.json  cloudbuild.yaml  convert_detailed_style.py  deploy.sh  deploy_normalized_data.sh  (+17 more)
(+369 files in other folders)
